# nts-radio-cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: main.rs  now_playing.rs  visualizer.rs
