[package]
name = "nts"
version = "0.1.0"
edition = "2024"
description = "A rich terminal home for NTS Radio"
license = "MIT"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
crossterm = "0.29"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
ratatui = "0.30"
ratatui-image = { version = "11.0.5", default-features = false, features = ["crossterm", "image-defaults"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tachyonfx = "0.25"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
objc2 = "0.6"
objc2-foundation = { version = "0.3.2", default-features = false, features = ["NSDictionary", "NSObject", "NSString"] }
objc2-media-player = { version = "0.3.2", default-features = false, features = ["MPMediaItem", "MPNowPlayingInfoCenter", "MPRemoteCommand", "MPRemoteCommandCenter", "MPRemoteCommandEvent", "block2"] }
