[package]
name = "nts-radio-cli"
version = "0.1.6"
edition = "2024"
description = "A rich terminal home for NTS Radio"
license = "MIT"
readme = "README.md"
repository = "https://github.com/r-ohan/nts-radio-cli"
homepage = "https://github.com/r-ohan/nts-radio-cli"
keywords = ["nts", "radio", "terminal", "ratatui", "tui"]
categories = ["command-line-utilities", "multimedia::audio"]

[[bin]]
name = "nts"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
crossterm = "0.29"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
ratatui-image = { version = "11.0.5", default-features = false, features = ["crossterm", "image-defaults"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
signal-hook = { version = "0.3", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
objc2 = "0.6"
objc2-foundation = { version = "0.3.2", default-features = false, features = ["NSDate", "NSDictionary", "NSObject", "NSObjCRuntime", "NSRunLoop", "NSString"] }
objc2-media-player = { version = "0.3.2", default-features = false, features = ["MPMediaItem", "MPNowPlayingInfoCenter", "MPRemoteCommand", "MPRemoteCommandCenter", "MPRemoteCommandEvent", "block2"] }
